--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "droppy",
-  "version": "13.0.0",
+  "version": "13.0.0-beta.0",
   "description": "Self-hosted file storage",
   "author": "silverwind <me@silverwind.io>",
   "repository": "silverwind/droppy",
