--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "author": "silverwind <me@silverwind.io>",
     "repository": "silverwind/droppy",
     "license": "BSD-2-Clause",
+    "bugs": "https://github.com/droppy-js/droppy/issues",
     "preferGlobal": true,
-    "bin": "./droppy.js",
+    "private": true,
     "engines": {
         "node": ">= 12.10.0"
     },
     "scripts": {
         "start": "lerna run start --stream",
+        "bootstrap": "lerna bootstrap",
         "test": "make test"
     },
     "dependencies": {
@@ -57,8 +59,7 @@
         "svgstore": "3.0.0-2",
         "terser": "5.2.1",
         "updates": "10.3.5",
-        "uppie": "1.1.3",
-        "versions": "8.4.3"
+        "uppie": "1.1.3"
     },
     "files": [
         "client",
