--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@ root: true
 extends: silverwind
 
 overrides:
-  - files: ["client/**/*.js"]
+  - files: ["packages/client/**/*.js"]
     rules:
       prefer-arrow-callback: [2, {allowNamedFunctions: true, allowUnboundThis: true}]
     env:
