--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "node": ">= 12.10.0"
     },
     "scripts": {
-        "start": "lerna run start --stream",
+        "start": "lerna run --stream start --",
         "bootstrap": "lerna bootstrap",
         "test": "make test"
     },
