--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
         "daemonize-process": "3.0.0",
         "escape-string-regexp": "4.0.0",
         "etag": "1.8.1",
+        "handlebars": "^4.7.7",
         "image-size": "0.8.3",
         "isbinaryfile": "4.0.6",
         "json-buffer": "3.0.1",
