--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -1,22 +1,17 @@
 {
-    "name": "@droppy-js/client",
+    "name": "@droppy-js/gui",
     "version": "0.0.0",
     "description": "> TODO: description",
     "author": "Mark Hughes <m@rkhugh.es>",
     "homepage": "https://github.com/droppy-js/droppy#readme",
     "license": "BSD-2-Clause",
-    "main": "lib/client.js",
     "dependencies": {
-        "handlebars": "4.7.6",
-        "file-extension": "4.0.5",
-        "screenfull": "5.0.2",
-        "mousetrap": "1.6.5",
-        "uppie": "1.1.3",
-        "codemirror": "5.57.0",
-        "jquery": "3.6.x",
-        "plyr": "3.6.2",
-        "photoswipe": "4.1.3",
-        "pdfjs-dist": "2.4.456"
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/data-grid": "^4.0.0-alpha.24",
+        "@material-ui/icons": "^4.11.2",
+        "next": "10.1.3",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
     },
     "directories": {
         "lib": "lib",
@@ -30,9 +25,14 @@
         "url": "git+https://github.com/droppy-js/droppy.git"
     },
     "scripts": {
-        "test": "echo \"Error: run tests from root\" && exit 1"
+        "dev": "next dev ./lib",
+        "build": "next build ./lib",
+        "start": "next start ./lib"
     },
     "bugs": {
         "url": "https://github.com/droppy-js/droppy/issues"
+    },
+    "devDependencies": {
+        "typescript": "^4.2.4"
     }
 }
