--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,8 @@
     "name": "@droppy-js/server",
     "version": "0.0.0",
     "description": "> TODO: description",
-    "author": "Mark Hughes <mark.hughes@leapdev.io>",
-    "homepage": "https://github.com/markhughes/droppy#readme",
+    "author": "Mark Hughes <m@rkhugh.es>",
+    "homepage": "https://github.com/droppy-js/droppy#readme",
     "license": "BSD-2-Clause",
     "main": "lib/index.js",
     "directories": {
@@ -15,13 +15,13 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/markhughes/droppy.git"
+        "url": "git+https://github.com/droppy-js/droppy.git"
     },
     "scripts": {
         "test": "echo \"Error: run tests from root\" && exit 1"
     },
     "bugs": {
-        "url": "https://github.com/markhughes/droppy/issues"
+        "url": "https://github.com/droppy-js/droppy/issues"
     },
     "dependencies": {
         "@droppy-js/client": "*",
