--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -9,16 +9,20 @@
         "@material-ui/core": "^4.11.3",
         "@material-ui/data-grid": "^4.0.0-alpha.24",
         "@material-ui/icons": "^4.11.2",
+        "final-form": "^4.20.2",
         "next": "10.1.3",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-final-form": "^6.5.3",
+        "rxjs": "^6.6.7",
+        "websocket": "^1.0.33"
     },
     "directories": {
         "lib": "lib",
         "test": "__tests__"
     },
     "files": [
-        "lib"
+        "dist"
     ],
     "repository": {
         "type": "git",
@@ -26,13 +30,14 @@
     },
     "scripts": {
         "dev": "next dev ./lib",
-        "build": "next build ./lib",
+        "build": "next build ./lib && next export ./lib -o ./dist",
         "start": "next start ./lib"
     },
     "bugs": {
         "url": "https://github.com/droppy-js/droppy/issues"
     },
     "devDependencies": {
+        "@types/websocket": "^1.0.2",
         "typescript": "^4.2.4"
     }
 }
