--- a/lerna.json
+++ b/lerna.json
@@ -2,12 +2,14 @@
     "packages": [
         "packages/*"
     ],
-    "version": "0.0.0",
+    "version": "0.0.1-alpha.0",
     "npmClient": "yarn",
     "useWorkspaces": false,
     "publish": {
         "npmClient": "npm",
-        "allowBranch": ["canary"],
+        "allowBranch": [
+            "canary"
+        ],
         "registry": "https://registry.npmjs.org/"
-      }  
+    }
 }
