--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,22 +1,22 @@
 {
     "name": "@droppy-js/client",
-    "version": "0.0.0",
+    "version": "0.0.1-alpha.0",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
     "license": "BSD-2-Clause",
     "main": "lib/client.js",
     "dependencies": {
-        "handlebars": "4.7.6",
-        "file-extension": "4.0.5",
-        "screenfull": "5.0.2",
-        "mousetrap": "1.6.5",
-        "uppie": "1.1.3",
         "codemirror": "5.57.0",
+        "file-extension": "4.0.5",
+        "handlebars": "4.7.6",
         "jquery": "3.6.x",
-        "plyr": "3.6.2",
+        "mousetrap": "1.6.5",
+        "pdfjs-dist": "2.4.456",
         "photoswipe": "4.1.3",
-        "pdfjs-dist": "2.4.456"
+        "plyr": "3.6.2",
+        "screenfull": "5.0.2",
+        "uppie": "1.1.3"
     },
     "directories": {
         "lib": "lib",
