fix: set access to publish

--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,7 @@
         "allowBranch": [
             "canary"
         ],
-        "registry": "https://registry.npmjs.org/"
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
     }
 }
