--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,13 @@
 {
     "name": "@droppy-js/cli",
-    "version": "0.0.1-alpha.0",
+    "version": "0.0.1-alpha.0+b610a3b7",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
     "license": "BSD-2-Clause",
     "main": "lib/cli.js",
     "dependencies": {
-        "@droppy-js/server": "^0.0.1-alpha.0",
+        "@droppy-js/server": "^0.0.1-alpha.0+b610a3b7",
         "daemonize-process": "^3.0.0",
         "minimist": "^1.2.5",
         "ps-node": "^0.1.6",
@@ -30,5 +30,6 @@
     },
     "bugs": {
         "url": "https://github.com/markhughes/droppy/issues"
-    }
+    },
+    "gitHead": "b610a3b7681c78fc73472717f3c0b896298bd16c"
 }
