--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@droppy-js/client",
-    "version": "0.0.1-alpha.0",
+    "version": "0.0.1-alpha.0+b610a3b7",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
@@ -34,5 +34,6 @@
     },
     "bugs": {
         "url": "https://github.com/markhughes/droppy/issues"
-    }
+    },
+    "gitHead": "b610a3b7681c78fc73472717f3c0b896298bd16c"
 }
