--- a/lerna.json
+++ b/lerna.json
@@ -5,12 +5,15 @@
     "version": "0.0.1-alpha.0",
     "npmClient": "yarn",
     "useWorkspaces": false,
-    "publish": {
-        "npmClient": "npm",
-        "allowBranch": [
-            "canary"
-        ],
-        "registry": "https://registry.npmjs.org/",
-        "access": "public"
-    }
+    "command": {
+        "version": {
+            "exact": true
+        },
+        "publish": {
+            "npmClient": "npm",
+            "allowBranch": ["master", "canary"],
+            "registry": "https://registry.npmjs.org/"
+        }
+      }
+    
 }
