--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@droppy-js/cli",
-    "version": "0.0.1-alpha.1+407b1e3c",
+    "name": "@droppyjs/cli",
+    "version": "0.0.1-alpha.2+28ab505a",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
     "license": "BSD-2-Clause",
     "main": "lib/cli.js",
     "dependencies": {
-        "@droppy-js/server": "^0.0.1-alpha.1+407b1e3c",
+        "@droppyjs/server": "0.0.1-alpha.2+28ab505a",
         "daemonize-process": "^3.0.0",
         "minimist": "^1.2.5",
         "ps-node": "^0.1.6",
@@ -31,5 +31,5 @@
     "bugs": {
         "url": "https://github.com/markhughes/droppy/issues"
     },
-    "gitHead": "407b1e3c514841169df7d2a8763d0db86181748c"
+    "gitHead": "28ab505abcbd47ec755406b7707912e41ae3aaa1"
 }
