--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@droppy-js/client",
-    "version": "0.0.1-alpha.1+407b1e3c",
+    "name": "@droppyjs/client",
+    "version": "0.0.1-alpha.2+28ab505a",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
@@ -35,5 +35,5 @@
     "bugs": {
         "url": "https://github.com/markhughes/droppy/issues"
     },
-    "gitHead": "407b1e3c514841169df7d2a8763d0db86181748c"
+    "gitHead": "28ab505abcbd47ec755406b7707912e41ae3aaa1"
 }
