--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@droppy-js/server",
-    "version": "0.0.1-alpha.1+407b1e3c",
+    "name": "@droppyjs/server",
+    "version": "0.0.1-alpha.2+28ab505a",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
@@ -24,7 +24,7 @@
         "url": "https://github.com/markhughes/droppy/issues"
     },
     "dependencies": {
-        "@droppy-js/client": "^0.0.1-alpha.1+407b1e3c",
+        "@droppyjs/client": "0.0.1-alpha.2+28ab505a",
         "busboy": "0.3.1",
         "chokidar": "3.4.2",
         "colorette": "1.2.1",
@@ -68,5 +68,5 @@
         "terser": "5.2.1",
         "updates": "10.3.5"
     },
-    "gitHead": "407b1e3c514841169df7d2a8763d0db86181748c"
+    "gitHead": "28ab505abcbd47ec755406b7707912e41ae3aaa1"
 }
