--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,13 @@
 {
     "name": "@droppyjs/cli",
-    "version": "0.0.1-alpha.2+28ab505a",
+    "version": "0.0.1-alpha.3+9a92894a",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
     "license": "BSD-2-Clause",
     "main": "lib/cli.js",
     "dependencies": {
-        "@droppyjs/server": "0.0.1-alpha.2+28ab505a",
+        "@droppyjs/server": "0.0.1-alpha.3+9a92894a",
         "daemonize-process": "^3.0.0",
         "minimist": "^1.2.5",
         "ps-node": "^0.1.6",
@@ -31,5 +31,7 @@
     "bugs": {
         "url": "https://github.com/markhughes/droppy/issues"
     },
-    "gitHead": "28ab505abcbd47ec755406b7707912e41ae3aaa1"
+    "publishConfig": {
+        "access": "public"
+    }
 }
