--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@droppyjs/server",
-    "version": "0.0.1-alpha.2+28ab505a",
+    "version": "0.0.1-alpha.3+9a92894a",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
@@ -24,7 +24,7 @@
         "url": "https://github.com/markhughes/droppy/issues"
     },
     "dependencies": {
-        "@droppyjs/client": "0.0.1-alpha.2+28ab505a",
+        "@droppyjs/client": "0.0.1-alpha.3+9a92894a",
         "busboy": "0.3.1",
         "chokidar": "3.4.2",
         "colorette": "1.2.1",
@@ -68,5 +68,7 @@
         "terser": "5.2.1",
         "updates": "10.3.5"
     },
-    "gitHead": "28ab505abcbd47ec755406b7707912e41ae3aaa1"
+    "publishConfig": {
+        "access": "public"
+    }
 }
