--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@droppyjs/server",
-    "version": "0.0.1-alpha.3+9a92894a",
+    "version": "0.0.2-alpha.0",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/markhughes/droppy#readme",
@@ -24,7 +24,7 @@
         "url": "https://github.com/markhughes/droppy/issues"
     },
     "dependencies": {
-        "@droppyjs/client": "0.0.1-alpha.3+9a92894a",
+        "@droppyjs/client": "0.0.2-alpha.0",
         "busboy": "0.3.1",
         "chokidar": "3.4.2",
         "colorette": "1.2.1",
