--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@droppyjs/server",
-    "version": "0.0.3-alpha.0",
+    "version": "0.0.4-alpha.0",
     "description": "> TODO: description",
     "author": "Mark Hughes <mark.hughes@leapdev.io>",
     "homepage": "https://github.com/droppyjs/droppy#readme",
@@ -47,12 +47,12 @@
         "rrdir": "8.1.1",
         "send": "0.17.1",
         "strip-ansi": "6.0.0",
+        "svgstore": "3.0.0-2",
         "untildify": "4.0.0",
         "valid-filename": "3.1.0",
         "which": "2.0.2",
         "ws": "7.3.1",
-        "yazl": "2.5.1",
-        "svgstore": "3.0.0-2"
+        "yazl": "2.5.1"
     },
     "devDependencies": {
         "autoprefixer": "9.8.6",
