--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,19 @@
     "files": [
         "lib"
     ],
+    "keywords": [
+        "self-hosted",
+        "personal",
+        "file",
+        "server",
+        "http",
+        "https",
+        "media",
+        "cloud",
+        "storage",
+        "self",
+        "hosted"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/droppyjs/droppy.git"
