--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "yazl": "2.5.1"
   },
   "devDependencies": {
+    "@npmcli/ci-detect": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "9.8.6",
