--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
         "escape-string-regexp": "4.0.0",
         "etag": "1.8.1",
         "handlebars": "^4.7.7",
+        "file-extension": "4.0.5",
         "image-size": "0.8.3",
         "isbinaryfile": "4.0.6",
         "json-buffer": "3.0.1",
