--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "test": "make test",
         "postinstall": "yarn bootstrap",
         "pub:canary": "lerna publish --c",
-        "pub": "lerna publish"
+        "pub": "lerna publish "
+    },
+    "resolutions": {
+        "hosted-git-info": "^4.0.2",
+        "lodash": "4.17.21"
     },
     "dependencies": {
         "busboy": "0.3.1",
@@ -48,16 +52,14 @@
         "yazl": "2.5.1"
     },
     "devDependencies": {
-        "autoprefixer": "9.8.6",
+        "autoprefixer": "10.2.5",
         "clean-css": "4.2.3",
         "eslint": "7.7.0",
         "eslint-config-silverwind": "18.0.2",
         "eslint-plugin-unicorn": "21.0.0",
         "html-minifier": "4.0.0",
         "lerna": "^4.0.0",
-        "postcss": "7.0.32",
-        "stylelint": "13.6.1",
-        "stylelint-config-silverwind": "2.0.8",
+        "postcss": "8.2.15",
         "svgstore": "3.0.0-2",
         "terser": "5.2.1",
         "updates": "10.3.5",
