--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,7 +33,7 @@
         "escape-string-regexp": "4.0.0",
         "etag": "1.8.1",
         "file-extension": "4.0.5",
-        "handlebars": "^4.7.7",
+        "handlebars": "4.7.7",
         "image-size": "0.8.3",
         "isbinaryfile": "4.0.6",
         "json-buffer": "3.0.1",
@@ -56,16 +56,14 @@
         "yazl": "2.5.1"
     },
     "devDependencies": {
-        "autoprefixer": "9.8.6",
+        "autoprefixer": "10.2.5",
         "clean-css": "4.2.3",
         "eslint": "7.7.0",
         "eslint-config-silverwind": "18.0.2",
         "eslint-plugin-unicorn": "21.0.0",
         "html-minifier": "4.0.0",
         "lerna": "^3.22.1",
-        "postcss": "7.0.32",
-        "stylelint": "13.6.1",
-        "stylelint-config-silverwind": "2.0.8",
+        "postcss": "8.2.15",
         "terser": "5.2.1",
         "updates": "10.3.5"
     },
