fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "droppy",
     "version": "13.0.0-beta.1",
     "description": "Self-hosted file storage",
-    "author": "silverwind <me@silverwind.io>",
-    "repository": "silverwind/droppy",
+    "author": "droppyjs <hello@droppyjs.com>",
+    "repository": "https://github.com/droppyjs/droppy",
     "license": "BSD-2-Clause",
     "bugs": "https://github.com/droppyjs/droppy/issues",
     "preferGlobal": true,
@@ -21,15 +21,19 @@
     },
     "resolutions": {
         "hosted-git-info": "^4.0.2",
-        "lodash": "4.17.21"
+        "lodash": "4.17.21",
+        "cheerio": "1.0.0-rc.10",
+        "trim-newlines": "4.0.2",
+        "normalize-url": "6.1.0",
+        "glob-parent": "6.0.0"
     },
     "dependencies": {
         "busboy": "0.3.1",
-        "chokidar": "3.4.2",
-        "colorette": "1.2.1",
+        "chokidar": "3.5.2",
+        "colorette": "1.2.2",
         "content-disposition": "0.5.3",
         "daemonize-process": "3.0.0",
-        "escape-string-regexp": "4.0.0",
+        "escape-string-regexp": "5.0.0",
         "etag": "1.8.1",
         "image-size": "0.8.3",
         "isbinaryfile": "4.0.6",
