--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "scripts": {
         "start": "lerna run --stream start --",
         "bootstrap": "lerna bootstrap",
-        "test": "make test",
+        "lint": "eslint packages",
+        "test": "yarn lint",
         "postinstall": "yarn bootstrap",
         "pub:canary": "lerna publish --c",
         "pub": "lerna publish && git push"
@@ -24,50 +25,53 @@
         "lodash": "4.17.21",
         "cheerio": "1.0.0-rc.10",
         "trim-newlines": "4.0.2",
-        "normalize-url": "6.1.0",
-        "glob-parent": "6.0.0"
+        "normalize-url": "7.0.1",
+        "glob-parent": "6.0.1",
+        "pacote": "11.3.5",
+        "conventional-changelog-core": "4.2.3",
+        "tar": "6.1.11"
     },
     "dependencies": {
         "busboy": "0.3.1",
         "chokidar": "3.5.2",
-        "colorette": "1.2.2",
+        "colorette": "1.3.0",
         "content-disposition": "0.5.3",
         "daemonize-process": "3.0.0",
         "escape-string-regexp": "5.0.0",
         "etag": "1.8.1",
-        "image-size": "0.8.3",
-        "isbinaryfile": "4.0.6",
+        "image-size": "1.0.0",
+        "isbinaryfile": "4.0.8",
         "json-buffer": "3.0.1",
         "lodash.debounce": "4.0.8",
         "lodash.throttle": "4.1.1",
-        "mime-types": "2.1.27",
+        "mime-types": "2.1.32",
         "minimist": "1.2.5",
         "mv": "2.1.1",
         "original-url": "1.2.3",
         "ps-node": "0.1.6",
-        "rfdc": "1.1.4",
-        "rrdir": "8.1.1",
+        "rfdc": "1.3.0",
+        "rrdir": "8.2.2",
         "send": "0.17.1",
-        "strip-ansi": "6.0.0",
+        "strip-ansi": "7.0.0",
         "untildify": "4.0.0",
-        "valid-filename": "3.1.0",
+        "valid-filename": "4.0.0",
         "which": "2.0.2",
-        "ws": "7.4.6",
+        "ws": "8.2.1",
         "yazl": "2.5.1"
     },
     "devDependencies": {
-        "autoprefixer": "10.2.5",
-        "clean-css": "4.2.3",
-        "eslint": "7.7.0",
+        "autoprefixer": "10.3.4",
+        "clean-css": "5.1.5",
+        "eslint": "7.32.0",
         "eslint-config-silverwind": "18.0.2",
         "eslint-plugin-unicorn": "21.0.0",
         "html-minifier": "4.0.0",
         "lerna": "^4.0.0",
-        "postcss": "8.2.15",
+        "postcss": "8.3.6",
         "svgstore": "3.0.0-2",
-        "terser": "5.2.1",
-        "updates": "10.3.5",
-        "uppie": "1.1.3"
+        "terser": "5.7.2",
+        "updates": "12.1.0",
+        "uppie": "1.1.4"
     },
     "files": [
         "client",
