--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@droppyjs/client": "0.1.0",
+        "@droppyjs/svgstore": "0.1.0",
         "busboy": "0.3.1",
         "chokidar": "3.4.2",
         "colorette": "1.2.1",
@@ -48,7 +49,6 @@
         "rrdir": "8.1.1",
         "send": "0.17.1",
         "strip-ansi": "6.0.0",
-        "svgstore": "3.0.0-2",
         "untildify": "4.0.0",
         "valid-filename": "3.1.0",
         "which": "2.0.2",
