--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "@droppyjs/client",
 	"version": "0.1.0",
-	"description": "> TODO: description",
+	"description": "> Client for droppy",
 	"author": "droppyjs <hello@droppyjs.com>",
 	"homepage": "https://github.com/droppyjs/droppy#readme",
 	"license": "BSD-2-Clause",
 	"main": "lib/client.js",
 	"dependencies": {
-		"codemirror": "5.61.0",
+		"codemirror": "5.62.3",
 		"file-extension": "4.0.5",
 		"handlebars": "4.7.7",
 		"jquery": "3.6.x",
@@ -15,7 +15,7 @@
 		"pdfjs-dist": "2.9.359",
 		"photoswipe": "4.1.3",
 		"plyr": "3.6.8",
-		"screenfull": "5.0.2",
+		"screenfull": "5.1.0",
 		"uppie": "1.1.4"
 	},
 	"directories": {
