--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,7 @@
     "main": "lib/cli.js",
     "dependencies": {
         "@droppyjs/server": "0.2.1",
+        "@droppyjs/utils": "0.2.1",
         "daemonize-process": "^3.0.0",
         "minimist": "^1.2.5",
         "ps-node": "^0.1.6",
@@ -49,5 +50,6 @@
     },
     "publishConfig": {
         "access": "public"
-    }
+    },
+    "gitHead": "c43ef66a2d426358537f7a3890b4ca31dfbf81ef"
 }
