--- a/packages/svgstore/package.json
+++ b/packages/svgstore/package.json
@@ -43,5 +43,6 @@
   },
   "bugs": {
     "url": "https://github.com/droppyjs/droppy/issues"
-  }
+  },
+  "gitHead": "c43ef66a2d426358537f7a3890b4ca31dfbf81ef"
 }
