chore: adjust gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.vscode/
 dist/
-/node_modules
-/npm-debug.log*
-/package-lock.json
-/yarn-error.log
-/lerna-debug.log
-/Dockerfile-dev
+node_modules
+npm-debug.log*
+package-lock.json
+yarn-error.log
+lerna-debug.log
+Dockerfile-dev
 coverage/
