--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,7 +36,7 @@
         "file-extension": "4.0.5",
         "handlebars": "4.7.7",
         "image-size": "0.8.3",
-        "isbinaryfile": "4.0.6",
+        "istextorbinary": "^6.0.0",
         "json-buffer": "3.0.1",
         "lodash.debounce": "4.0.8",
         "lodash.throttle": "4.1.1",
@@ -53,18 +53,18 @@
         "valid-filename": "3.1.0",
         "which": "2.0.2",
         "ws": "7.4.6",
-        "yazl": "2.5.1"
+        "yazl": "2.5.1",
+        "autoprefixer": "10.4.2",
+        "postcss": "8.2.15",
+        "clean-css": "4.2.3",
+        "html-minifier": "4.0.0",
+        "terser": "5.2.1"
     },
     "devDependencies": {
-        "autoprefixer": "10.2.5",
-        "clean-css": "4.2.3",
         "eslint": "7.7.0",
         "eslint-config-silverwind": "18.0.2",
         "eslint-plugin-unicorn": "21.0.0",
-        "html-minifier": "4.0.0",
         "lerna": "^3.22.1",
-        "postcss": "8.2.15",
-        "terser": "5.2.1",
         "updates": "10.3.5"
     },
     "keywords": [
