--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@droppyjs/server",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "description": "> Server for droppy.",
     "author": "droppyjs <hello@droppyjs.com>",
     "homepage": "https://github.com/droppyjs/droppy#readme",
@@ -25,9 +25,11 @@
     },
     "dependencies": {
         "@droppyjs/client": "0.2.1",
-        "@droppyjs/svgstore": "0.2.1",
+        "@droppyjs/svgstore": "0.2.3",
+        "autoprefixer": "10.4.2",
         "busboy": "1.4.0",
         "chokidar": "3.4.2",
+        "clean-css": "4.2.3",
         "colorette": "1.2.1",
         "content-disposition": "0.5.3",
         "daemonize-process": "3.0.0",
@@ -35,6 +37,7 @@
         "etag": "1.8.1",
         "file-extension": "4.0.5",
         "handlebars": "4.7.7",
+        "html-minifier": "4.0.0",
         "image-size": "0.8.3",
         "istextorbinary": "^6.0.0",
         "json-buffer": "3.0.1",
@@ -44,21 +47,18 @@
         "minimist": "1.2.5",
         "mv": "2.1.1",
         "original-url": "1.2.3",
+        "postcss": "8.2.15",
         "ps-node": "0.1.6",
         "rfdc": "1.1.4",
         "rrdir": "8.1.1",
         "send": "0.17.1",
         "strip-ansi": "6.0.0",
+        "terser": "5.2.1",
         "untildify": "4.0.0",
         "valid-filename": "3.1.0",
         "which": "2.0.2",
         "ws": "7.4.6",
-        "yazl": "2.5.1",
-        "autoprefixer": "10.4.2",
-        "postcss": "8.2.15",
-        "clean-css": "4.2.3",
-        "html-minifier": "4.0.0",
-        "terser": "5.2.1"
+        "yazl": "2.5.1"
     },
     "devDependencies": {
         "eslint": "7.7.0",
