--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,10 +16,12 @@
     },
     "directories": {
         "lib": "lib",
-        "test": "__tests__"
+        "test": "__tests__",
+        "dist": "dist"
     },
     "files": [
-        "lib"
+        "lib",
+        "dist"
     ],
     "keywords": [
         "self-hosted",
