--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
-        node: ['12', '14', '16']
+        node: ["14", "16", "18", "20"]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -17,4 +17,3 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: yarn -s
       - run: yarn -s test
-
