--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,51 +1,51 @@
 {
-	"name": "@droppyjs/client",
-	"version": "0.2.7",
-	"description": "> Client for droppy",
-	"author": "droppyjs <hello@droppyjs.com>",
-	"homepage": "https://github.com/droppyjs/droppy#readme",
-	"license": "BSD-2-Clause",
-	"main": "lib/client.js",
-	"dependencies": {
-		"codemirror": "5.62.3",
-		"file-extension": "4.0.5",
-		"handlebars": "4.7.7",
-		"jquery": "3.6.x",
-		"mousetrap": "1.6.5",
-		"pdfjs-dist": "2.9.359",
-		"photoswipe": "4.1.3",
-		"plyr": "3.6.8",
-		"screenfull": "5.1.0",
-		"uppie": "1.1.4"
-	},
-	"directories": {
-		"lib": "lib",
-		"test": "tests"
-	},
-	"files": [
-		"lib"
-	],
-	"keywords": [
-		"self-hosted",
-		"personal",
-		"file",
-		"server",
-		"http",
-		"https",
-		"media",
-		"cloud",
-		"storage",
-		"self",
-		"hosted"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/droppyjs/droppy.git"
-	},
-	"bugs": {
-		"url": "https://github.com/droppyjs/droppy/issues"
-	},
-	"publishConfig": {
-		"access": "public"
-	}
+    "name": "@droppyjs/client",
+    "version": "1.0.0",
+    "description": "> Client for droppy",
+    "author": "droppyjs <hello@droppyjs.com>",
+    "homepage": "https://github.com/droppyjs/droppy#readme",
+    "license": "BSD-2-Clause",
+    "main": "lib/client.js",
+    "dependencies": {
+        "codemirror": "5.62.3",
+        "file-extension": "4.0.5",
+        "handlebars": "4.7.7",
+        "jquery": "3.6.x",
+        "mousetrap": "1.6.5",
+        "pdfjs-dist": "2.9.359",
+        "photoswipe": "4.1.3",
+        "plyr": "^3.6.8",
+        "screenfull": "5.1.0",
+        "uppie": "1.1.4"
+    },
+    "directories": {
+        "lib": "lib",
+        "test": "tests"
+    },
+    "files": [
+        "lib"
+    ],
+    "keywords": [
+        "self-hosted",
+        "personal",
+        "file",
+        "server",
+        "http",
+        "https",
+        "media",
+        "cloud",
+        "storage",
+        "self",
+        "hosted"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/droppyjs/droppy.git"
+    },
+    "bugs": {
+        "url": "https://github.com/droppyjs/droppy/issues"
+    },
+    "publishConfig": {
+        "access": "public"
+    }
 }
